--- a/.github/workflows/create-staging_dev.yaml
+++ b/.github/workflows/create-staging_dev.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     if: contains(github.event.pull_request.labels.*.name, 'StagingDev')
-    uses: .github/workflows/deploy_job_template.yaml@main
+    uses: ./.github/workflows/deploy_job_template.yaml@main
     with:
       pr-number: ${{ github.event.pull_request.number }}
       stack-name: debug-env-${{ github.event.pull_request.number }}
