--- a/.github/workflows/delete-stack-on-pr-close.yaml
+++ b/.github/workflows/delete-stack-on-pr-close.yaml
@@ -6,6 +6,6 @@ on:
 
 jobs:
   delete-stack:
-    uses: .github/workflows/delete-stack-template.yaml@main
+    uses: ./.github/workflows/delete-stack-template.yaml@main
     with:
       stack-name: debug-env-${{ github.event.number }}
