--- a/.github/workflows/deploy_job_template.yaml
+++ b/.github/workflows/deploy_job_template.yaml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Setup aws-sam
         uses: aws-actions/setup-sam@v2
+        with:
+          use-installer: true
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1-node16
