--- a/.github/workflows/deploy_aws_on_dev.yaml
+++ b/.github/workflows/deploy_aws_on_dev.yaml
@@ -13,3 +13,7 @@ jobs:
       pr-number: dev
       stack-name: dev
       s3-dir: dev
+    secrets:
+      AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+      AWS_ACCOUNT_NAME: ${{ secrets.AWS_ACCOUNT_NAME }}
+      AWS_GITHUB_OIDC_ROLE_NAME: ${{ secrets.AWS_GITHUB_OIDC_ROLE_NAME }}
