--- a/template.yaml
+++ b/template.yaml
@@ -4,8 +4,9 @@ Description: >-
   Tarako API Resource template
 
 Globals:
-    Function:
-        Timeout: 3
+  Function:
+    Timeout: 3
+    Runtime: python3.10
 
 Resources:
   GetSectionsFunction:
@@ -13,8 +14,7 @@ Resources:
     Properties:
       CodeUri: app/sections/
       Handler: get_list.lambda_handler
-      Runtime: python3.10
-      FunctionName: get_sections-${PR_NUMBER}
+      FunctionName: !Sub get-sections-${PR_NUMBER}
       Events:
         UsersGetEvent:
           Type: Api
@@ -27,8 +27,7 @@ Resources:
     Properties:
       CodeUri: app/sections/
       Handler: get_entry.lambda_handler
-      Runtime: python3.10
-      FunctionName: get_section_entry-${PR_NUMBER}
+      FunctionName: !Sub get-section-entry-${PR_NUMBER}
       Events:
         UsersGetUserEvent:
           Type: Api
@@ -41,8 +40,7 @@ Resources:
     Properties:
       CodeUri: app/users/
       Handler: get_list.lambda_handler
-      Runtime: python3.10
-      FunctionName: get_users-${PR_NUMBER}
+      FunctionName: !Sub get-users-${PR_NUMBER}
       Events:
         UsersGetEvent:
           Type: Api
@@ -55,8 +53,7 @@ Resources:
     Properties:
       CodeUri: app/users/
       Handler: get_user.lambda_handler
-      Runtime: python3.10
-      FunctionName: get_user_entry-${PR_NUMBER}
+      FunctionName: !Sub get-user-entry-${PR_NUMBER}
       Events:
         UsersGetUserEvent:
           Type: Api
@@ -83,8 +80,7 @@ Resources:
     Properties:
       CodeUri: app/tasks/
       Handler: get_list.lambda_handler
-      Runtime: python3.10
-      FunctionName: get_tasks-${PR_NUMBER}
+      FunctionName: !Sub get-tasks-${PR_NUMBER}
       Events:
         TasksGetEvent:
           Type: Api
@@ -97,8 +93,7 @@ Resources:
     Properties:
       CodeUri: app/tasks/
       Handler: post.lambda_handler
-      Runtime: python3.10
-      FunctionName: post_task-${PR_NUMBER}
+      FunctionName: !Sub post-task-${PR_NUMBER}
       Events:
         TasksPostEvent:
           Type: Api
@@ -111,8 +106,7 @@ Resources:
     Properties:
       CodeUri: app/tasks/
       Handler: get_task.lambda_handler
-      Runtime: python3.10
-      FunctionName: get_task_entry-${PR_NUMBER}
+      FunctionName: !Sub get-task-entry-${PR_NUMBER}
       Events:
         TasksGetTaskEvent:
           Type: Api
@@ -125,8 +119,7 @@ Resources:
     Properties:
       CodeUri: app/tasks/
       Handler: put.lambda_handler
-      Runtime: python3.10
-      FunctionName: put_task_entry-${PR_NUMBER}
+      FunctionName: !Sub put-task-entry-${PR_NUMBER}
       Events:
         TasksPutTaskEvent:
           Type: Api
@@ -139,8 +132,7 @@ Resources:
     Properties:
       CodeUri: app/tasks/
       Handler: delete.lambda_handler
-      Runtime: python3.10
-      FunctionName: delete_task_entry-${PR_NUMBER}
+      FunctionName: !Sub delete-task-entry-${PR_NUMBER}
       Events:
         TasksDeleteTaskEvent:
           Type: Api
@@ -153,8 +145,7 @@ Resources:
     Properties:
       CodeUri: app/diary/users/
       Handler: get_all_users_list.lambda_handler
-      Runtime: python3.10
-      FunctionName: get_all_users_diaries-${PR_NUMBER}
+      FunctionName: !Sub get-all-users-diaries-${PR_NUMBER}
       Events:
         DiaryUsersGetEvent:
           Type: Api
@@ -167,8 +158,7 @@ Resources:
     Properties:
       CodeUri: app/diary/users/
       Handler: get_single_user_list.lambda_handler
-      Runtime: python3.10
-      FunctionName: get_user_diaries-${PR_NUMBER}
+      FunctionName: !Sub get-user-diaries-${PR_NUMBER}
       Events:
         DiaryUsersGetUserEvent:
           Type: Api
@@ -181,8 +171,7 @@ Resources:
     Properties:
       CodeUri: app/diary/users/
       Handler: post_entry.lambda_handler
-      Runtime: python3.10
-      FunctionName: post_user_diary-${PR_NUMBER}
+      FunctionName: !Sub post-user-diary-${PR_NUMBER}
       Events:
         DiaryUsersPostUserEvent:
           Type: Api
@@ -195,8 +184,7 @@ Resources:
     Properties:
       CodeUri: app/diary/users/
       Handler: get_entry.lambda_handler
-      Runtime: python3.10
-      FunctionName: get_user_diary_entry-${PR_NUMBER}
+      FunctionName: !Sub get-user-diary-entry-${PR_NUMBER}
       Events:
         DiaryUsersGetUserDiaryEvent:
           Type: Api
@@ -209,8 +197,7 @@ Resources:
     Properties:
       CodeUri: app/diary/users/
       Handler: put_entry.lambda_handler
-      Runtime: python3.10
-      FunctionName: put_user_diary_entry-${PR_NUMBER}
+      FunctionName: !Sub put_user-diary-entry-${PR_NUMBER}
       Events:
         DiaryUsersPutUserDiaryEvent:
           Type: Api
@@ -223,8 +210,7 @@ Resources:
     Properties:
       CodeUri: app/diary/users/
       Handler: delete_entry.lambda_handler
-      Runtime: python3.10
-      FunctionName: delete_user_diary_entry-${PR_NUMBER}
+      FunctionName: !Sub delete-user-diary-entry-${PR_NUMBER}
       Events:
         DiaryUsersDeleteUserDiaryEvent:
           Type: Api
@@ -237,8 +223,7 @@ Resources:
     Properties:
       CodeUri: app/diary/sections/
       Handler: get_all_sections_list.lambda_handler
-      Runtime: python3.10
-      FunctionName: get_all_sections_diaries-${PR_NUMBER}
+      FunctionName: !Sub get-all-sections-diaries-${PR_NUMBER}
       Events:
         DiarySectionsGetEvent:
           Type: Api
@@ -251,8 +236,7 @@ Resources:
     Properties:
       CodeUri: app/diary/sections/
       Handler: get_single_section_list.lambda_handler
-      Runtime: python3.10
-      FunctionName: get_section_diaries-${PR_NUMBER}
+      FunctionName: !Sub get-section-diaries-${PR_NUMBER}
       Events:
         DiarySectionsGetSectionEvent:
           Type: Api
@@ -265,8 +249,7 @@ Resources:
     Properties:
       CodeUri: app/diary/sections/
       Handler: post_entry.lambda_handler
-      Runtime: python3.10
-      FunctionName: post_section_diary-${PR_NUMBER}
+      FunctionName: !Sub post-section-diary-${PR_NUMBER}
       Events:
         DiarySectionsPostSectionEvent:
           Type: Api
@@ -279,8 +262,7 @@ Resources:
     Properties:
       CodeUri: app/diary/sections/
       Handler: get_entry.lambda_handler
-      Runtime: python3.10
-      FunctionName: get_section_diary_entry-${PR_NUMBER}
+      FunctionName: !Sub get-section-diary-entry-${PR_NUMBER}
       Events:
         DiarySectionsGetSectionDiaryEvent:
           Type: Api
@@ -293,8 +275,7 @@ Resources:
     Properties:
       CodeUri: app/diary/sections/
       Handler: put_entry.lambda_handler
-      Runtime: python3.10
-      FunctionName: put_section_diary_entry-${PR_NUMBER}
+      FunctionName: !Sub put-section-diary-entry-${PR_NUMBER}
       Events:
         DiarySectionsPutSectionDiaryEvent:
           Type: Api
@@ -307,8 +288,7 @@ Resources:
     Properties:
       CodeUri: app/diary/sections/
       Handler: delete_entry.lambda_handler
-      Runtime: python3.10
-      FunctionName: delete_section_diary_entry-${PR_NUMBER}
+      FunctionName: !Sub delete-section-diary-entry-${PR_NUMBER}
       Events:
         DiarySectionsDeleteSectionDiaryEvent:
           Type: Api
@@ -321,12 +301,12 @@ Resources:
     Properties:
       Name: tarako-api
       StageName: dev
-      DefinitionUri: ${S3_OPENAPI_FILE}
+      DefinitionUri: !Sub ${S3_OPENAPI_FILE}
 
   TarakoTasksTable:
     Type: 'AWS::DynamoDB::Table'
     Properties:
-      TableName: TasksTable-${PR_NUMBER}
+      TableName: !Sub TasksTable-${PR_NUMBER}
       AttributeDefinitions:
         - AttributeName: id
           AttributeType: S
@@ -340,7 +320,7 @@ Resources:
   TarakoUserDiaryTable:
     Type: 'AWS::DynamoDB::Table'
     Properties:
-      TableName: UserDiaryTable-${PR_NUMBER}
+      TableName: !Sub UserDiaryTable-${PR_NUMBER}
       AttributeDefinitions:
         - AttributeName: id
           AttributeType: S
@@ -353,7 +333,7 @@ Resources:
   TarakoSectionDiaryTable:
     Type: 'AWS::DynamoDB::Table'
     Properties:
-      TableName: SectionDiaryTable-${PR_NUMBER}
+      TableName: !Sub SectionDiaryTable-${PR_NUMBER}
       AttributeDefinitions:
         - AttributeName: id
           AttributeType: S
