--- a/.github/workflows/deploy_job_template.yaml
+++ b/.github/workflows/deploy_job_template.yaml
@@ -33,7 +33,7 @@ env:
   OPENAPI_FILE: openapi.yaml
   PR_NUMBER: ${{ inputs.pr-number }}
   STACK_NAME: ${{ inputs.stack-name }}
-  S3_OPENAPI_FILE: s3://${{ secrets.AWS_S3_BUCKET }}/${{ inputs.s3-dir }}/openapi.yaml
+  S3_DIR: ${{ inputs.s3-dir }}
 
 jobs:
   deploy:
@@ -60,9 +60,9 @@ jobs:
       - run: aws sts get-caller-identity
 
       - name: Upload to Amazon S3
-        run: aws s3 cp --region ${AWS_REGION} ${OPENAPI_FILE} ${S3_OPENAPI_FILE}
+        run: aws s3 cp --region ${AWS_REGION} ${OPENAPI_FILE} s3://${AWS_S3_BUCKET}/${S3_DIR}/${OPENAPI_FILE}
 
       - name: Build and Deploy Cloud Formation stacks
         run: |
           sam build
-          sam deploy --template-file .aws-sam/build/template.yaml --stack-name ${STACK_NAME} --capabilities CAPABILITY_IAM --s3-bucket ${AWS_S3_BUCKET}
+          sam deploy --template-file .aws-sam/build/template.yaml --stack-name ${STACK_NAME} --capabilities CAPABILITY_IAM --s3-bucket ${AWS_S3_BUCKET} --parameter-overrides OpenApiFile=${OPENAPI_FILE} S3Dir=${S3_DIR} S3Bucket=${AWS_S3_BUCKET}  PrNumber=${PR_NUMBER} --no-fail-on-empty-changeset
