--- a/template.yaml
+++ b/template.yaml
@@ -31,6 +31,12 @@ Resources:
     Properties:
       Name: !Sub tarako-api-${PrNumber}
       StageName: dev
+      Cors:
+        AllowOrigin: "'*'"
+        AllowCredentials: true
+        AllowMethods: "'GET,POST,PUT,DELETE,OPTIONS'"
+        AllowHeaders: "'Content-Type,X-CSRF-TOKEN'"
+
       # DefinitionUri:
       #   Bucket: !Sub ${S3Bucket}
       #   Key: !Sub ${S3Dir}/${OpenApiFile}
@@ -48,7 +54,15 @@ Resources:
             Path: /sections
             Method: get
             RestApiId: !Ref ApiGateway
-
+      Integration:
+        IntegrationResponses:
+        - StatusCode: 200
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+            method.response.header.Access-Control-Allow-Methods: "'POST,OPTIONS'"
+            method.response.header.Access-Control-Allow-Origin: "'*'"
+          ResponseTemplates:
+            application/json: ''
   GetSectionEntryFunction:
     Type: 'AWS::Serverless::Function'
     Properties:
