--- a/.github/workflows/create_staging_for_PR.yaml
+++ b/.github/workflows/create_staging_for_PR.yaml
@@ -1,7 +1,7 @@
 name: Deploy to staging environment for PR
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [opened, synchronize, reopened, labeled, unlabeled]
     branches:
       - "feature/**"
       - "features/**"
