update: gtihub actions pull_request remove branch

--- a/.github/workflows/create_staging_for_PR.yaml
+++ b/.github/workflows/create_staging_for_PR.yaml
@@ -1,12 +1,13 @@
 name: Deploy to staging environment for PR
+
 on:
   pull_request:
     types: [opened, synchronize, reopened, labeled, unlabeled]
-    branches:
-      - "feature/**"
-      - "features/**"
-      - "fix/**"
-      - "patch/**"
+    # branches:
+    #   - "feature/**"
+    #   - "features/**"
+    #   - "fix/**"
+    #   - "patch/**"
 
 jobs:
   deploy:
