--- a/.github/workflows/create_staging_for_PR.yaml
+++ b/.github/workflows/create_staging_for_PR.yaml
@@ -15,7 +15,7 @@ jobs:
     with:
       pr-number: ${{ github.event.pull_request.number }}
       stack-name: debug-env-${{ github.event.pull_request.number }}
-      s3-dir: PR-${{ env.PR_NUMBER }}
+      s3-dir: PR-${{ github.event.pull_request.number }}
     secrets:
       AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
       AWS_ACCOUNT_NAME: ${{ secrets.AWS_ACCOUNT_NAME }}
