--- a/.github/workflows/deploy_job_template.yaml
+++ b/.github/workflows/deploy_job_template.yaml
@@ -73,7 +73,7 @@ jobs:
         run: |
           sam build
           sam deploy --template-file .aws-sam/build/template.yaml --stack-name ${STACK_NAME} --capabilities CAPABILITY_IAM --s3-bucket ${AWS_S3_BUCKET} --parameter-overrides OpenApiFile=${OPENAPI_FILE} S3Dir=${S3_DIR} S3Bucket=${AWS_S3_BUCKET} PrNumber=${PR_NUMBER} --no-fail-on-empty-changeset
-          deployed_url=$(aws cloudformation describe-stacks --stack-name my-stack --query "Stacks[0].Outputs[?OutputKey=='ApiUrl'].OutputValue" --output text)
+          deployed_url=$(aws cloudformation describe-stacks --stack-name ${STACK_NAME} --query "Stacks[0].Outputs[?OutputKey=='ApiUrl'].OutputValue" --output text)
           echo "::set-output name=deployed_url::$deployed_url"
 
       - name: Comment on PR
