fix: secret parameter

--- a/.github/workflows/create_staging_for_PR.yaml
+++ b/.github/workflows/create_staging_for_PR.yaml
@@ -26,3 +26,4 @@ jobs:
       AWS_ACCOUNT_NAME: ${{ secrets.AWS_ACCOUNT_NAME }}
       AWS_GITHUB_OIDC_ROLE_NAME: ${{ secrets.AWS_GITHUB_OIDC_ROLE_NAME }}
       SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
