--- a/.github/workflows/deploy_job_template.yaml
+++ b/.github/workflows/deploy_job_template.yaml
@@ -27,6 +27,9 @@ on:
       SLACK_WEBHOOK:
         description: 'Slack Webhook URL'
         required: false
+      GITHUB_TOKEN:
+        description: 'GitHub Token'
+        required: true
 
 env:
   AWS_REGION: 'ap-northeast-1'
